# EHREngine

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: headroom.mdc
clinic/: admin.py  views.py
clinic/management/commands/: seed_data.py
clinic/migrations/: 0001_initial.py  0002_medication_prescription_refillrequest.py  0003_billingrule.py  0004_patient_model_and_public_ids.py  0005_human_escalation.py  0006_refill_authorization_status.py  0007_refill_auth_controlled_only.py  0008_refill_status_dispensed.py
clinic/models/: __init__.py  appointment.py  billing_rule.py  department.py  doctor.py  human_escalation.py  insurance.py  medication.py  patient.py  prescription.py  refill_request.py
clinic/templates/admin/clinic/: patient_overview.html
clinic/templates/clinic/: appointment_detail.html  escalation_detail.html  refill_detail.html  schedule_dashboard.html
docs/: mcp-route-config.md
docs/diagrams/: mcp_architecture.md  mcp_availability.md  mcp_billing.md  mcp_catalog.md  mcp_insurance.md  mcp_refills.md  mcp_scheduling.md
ehrengine/: asgi.py  urls.py  wsgi.py
ehrengine/settings/: base.py  test.py
home/migrations/: 0001_initial.py
home/templates/home/: home_page.html
mcp_server/: auth.py  roles.py  server.py
mcp_server/schemas/: __init__.py  auth_mapping.py  responses.py
mcp_server/tools/: availability.py  billing.py  catalog.py  escalations.py  insurance.py  normalize.py  patients.py  refills.py  scheduling.py  urls.py
tests/: conftest.py  mcp_helpers.py  test_billing_and_auth.py  test_mcp_schemas.py  test_mcp_tools.py  test_patient_overview_admin.py
