[project]
name = "ehrengine"
version = "0.1.0"
description = "EHR/PMS POC with Wagtail and MCP tools for agentic workflows"
requires-python = ">=3.12"
dependencies = [
    "wagtail>=6.4",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.3.0",
    "mcp[cli]>=1.27.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ehrengine", "clinic", "mcp_server", "home"]
